--- a/web-client/public/index.html
+++ b/web-client/public/index.html
@@ -36,5 +36,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono">
   </body>
 </html>
