--- a/local/client/public/index.html
+++ b/local/client/public/index.html
@@ -8,6 +8,19 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans+Condensed|IBM+Plex+Sans:300,300i,400,400i,700,700i|IBM+Plex+Serif:400,400i" rel="stylesheet"> -->
     <title>Streamlit</title>
+
+    <!-- Enable react-leaflet -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+      crossorigin=""
+    ></script>
   </head>
   <body>
     <noscript>
