Got the nicer fonts working.

--- a/local/client/public/index.html
+++ b/local/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!-- <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans+Condensed|IBM+Plex+Sans:300,300i,400,400i,700,700i|IBM+Plex+Serif:400,400i" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans+Condensed|IBM+Plex+Sans:300,300i,400,400i,700,700i|IBM+Plex+Serif:400,400i" rel="stylesheet">
     <title>Streamlit</title>
 
     <!-- Enable react-leaflet -->
