--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,16 @@
 
     <title>Streamlit</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122023594-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122023594-1');
+    </script>
+
     <!-- Enable react-leaflet -->
     <link
       rel="stylesheet"
