Make reports use Streamlit's [~~] favicon. (#403)
* Update robots.txt using Google's robot tested tool.

* Make reports use Streamlit's [~~] favicon.

* [Conda] Add a barebones version of streamlit/meta.yaml for conda packaging.

Also update version script to also look at this file.

* [Conda] Add a script to generate packages.

* [Conda] Add streamlit conda package dependencies.

Also add a note to lib/Pipfile to keep things in sync manually for now.

* [Conda] Add base58 and enum-compat packages.

When doing a `conda build .`, streamlit fails building due to missing
dependencies that aren't local or in conda-forge.

```
conda.exceptions.ResolvePackageNotFound:
  - base58
  - enum-compat

conda_build.exceptions.DependencyNeedsBuildingError: Unsatisfiable dependencies for platform linux-64: {'base58', 'enum-compat'}
```

These files were autogenerated with this command
```
$ conda skeleton pypi base58 enum-compat --recursive
```

* [Conda] Make base58, enum-compat not depend on system architecture

* [Conda] Create output streamlit-forge directory and conda index it.

To test, you can serve it via
```
$ python3 -m http.serve
or
$ python2 -m SimpleHTTPServer
```

* [Conda] Add documentation on how to build conda packages.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <link href="%PUBLIC_URL%/fonts/fonts.css" rel="stylesheet">
 
     <title>Streamlit</title>
