--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <!-- Copyright 2018 Streamlit Inc. All rights reserved -->
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <link href="%PUBLIC_URL%/fonts/fonts.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
 
     <title>Streamlit</title>
 
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- Ipify code to set IP address -->
-    <script type="application/javascript">
+    <script>
       var BROWSER_IP_ADDRESS;
       function setBrowserIP(json) {
         if (BROWSER_IP_ADDRESS != null) {
@@ -42,13 +42,20 @@
         BROWSER_IP_ADDRESS = json.ip;
       }
     </script>
-    <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=setBrowserIP"></script>
+    <script src="https://api.ipify.org?format=jsonp&callback=setBrowserIP"></script>
 
+    <!-- Bokeh charts -->
+    <!-- TODO: use npm instead -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bokeh/bokeh-1.1.0.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bokeh/bokeh-widgets-1.1.0.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bokeh/bokeh-tables-1.1.0.min.css" />
+    <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-1.1.0.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-widgets-1.1.0.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-tables-1.1.0.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-api-1.1.0.min.js"></script>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
