--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,7 +38,7 @@
     <script src="https://api.ipify.org?format=jsonp&callback=setBrowserIP"></script>
 
     <!-- Bokeh charts -->
-    <!-- TODO: use npm instead -->
+    <!-- TODO: use npm package instead -->
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bokeh/bokeh-1.1.0.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bokeh/bokeh-widgets-1.1.0.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bokeh/bokeh-tables-1.1.0.min.css" />
