Support st.write(keras_model) (#707)
* Add tensorflow and pydot libs

* Support keras model type in st.write

* use d3-graphviz for charting graphviz and keras graphs, remove dagre libs

* dynamic table height overridable by user input

* preload viz.js script for web workers

* Install graphviz via circleci

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,6 +44,9 @@
     <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-widgets-1.1.0.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-tables-1.1.0.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bokeh/bokeh-api-1.1.0.min.js"></script>
+
+    <!-- load via script to enable web workers -->
+    <script src="%PUBLIC_URL%/vendor/viz/viz-1.8.0.min.js" type="javascript/worker"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
