--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,11 +14,14 @@
  limitations under the License.
 -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
 
     <title>Streamlit</title>
@@ -38,14 +41,68 @@
 
     <!-- Segment.io -->
     <script>
-      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
-      analytics.load("iCkMy7ymtJ9qYzQRXkQpnAJEq7D4NyMU");
-      analytics.page();
-      }}();
+      !(function() {
+        var analytics = (window.analytics = window.analytics || [])
+        if (!analytics.initialize)
+          if (analytics.invoked)
+            window.console &&
+              console.error &&
+              console.error("Segment snippet included twice.")
+          else {
+            analytics.invoked = !0
+            analytics.methods = [
+              "trackSubmit",
+              "trackClick",
+              "trackLink",
+              "trackForm",
+              "pageview",
+              "identify",
+              "reset",
+              "group",
+              "track",
+              "ready",
+              "alias",
+              "debug",
+              "page",
+              "once",
+              "off",
+              "on",
+            ]
+            analytics.factory = function(t) {
+              return function() {
+                var e = Array.prototype.slice.call(arguments)
+                e.unshift(t)
+                analytics.push(e)
+                return analytics
+              }
+            }
+            for (var t = 0; t < analytics.methods.length; t++) {
+              var e = analytics.methods[t]
+              analytics[e] = analytics.factory(e)
+            }
+            analytics.load = function(t, e) {
+              var n = document.createElement("script")
+              n.type = "text/javascript"
+              n.async = !0
+              n.src =
+                "https://cdn.segment.com/analytics.js/v1/" +
+                t +
+                "/analytics.min.js"
+              var a = document.getElementsByTagName("script")[0]
+              a.parentNode.insertBefore(n, a)
+              analytics._loadOptions = e
+            }
+            analytics.SNIPPET_VERSION = "4.1.0"
+            analytics.load("iCkMy7ymtJ9qYzQRXkQpnAJEq7D4NyMU")
+          }
+      })()
     </script>
 
     <!-- load via script to enable web workers -->
-    <script src="%PUBLIC_URL%/vendor/viz/viz-1.8.0.min.js" type="javascript/worker"></script>
+    <script
+      src="%PUBLIC_URL%/vendor/viz/viz-1.8.0.min.js"
+      type="javascript/worker"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
