prettier ignore and moving enzyme as a dev dependency

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,6 +40,7 @@
     ></script>
 
     <!-- Segment.io -->
+    <!-- prettier-ignore-start -->
     <script>
       !(function() {
         var analytics = (window.analytics = window.analytics || [])
@@ -97,6 +98,7 @@
           }
       })()
     </script>
+    <!-- prettier-ignore-end -->
 
     <!-- load via script to enable web workers -->
     <script
